intTests/test_type_errors/err001.log.good
Loading file "err001.saw"
Type errors:
  err001.saw:1:23-1:24: Error: Type mismatch.
    Expected: String
    Found:    Int

  err001.saw:1:14-1:20: Note: The type String arises from this type annotation
  err001.saw:1:23-1:24: Note: The type Int arises from the type of this term


FAILED
