intTests/test_type_errors/err001.saw
let foo () : String = 3;
